--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
   - local-lib cache
   - perl -V
   - build-dist
+  - cp MANIFEST.SKIP $BUILD_DIR # so xt/manifest.t can work right
   - cd $BUILD_DIR             # $BUILD_DIR is set by the build-dist command
 install:
   - cpan-install --deps       # installs prereqs, including recommends
