--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ jdk:
 matrix:
   include:
     - jdk: "oraclejdk8"
-      env: AUTHOR_TESTING=1 RELEASE_TESTING=1 COVERAGE=1
+      env: AUTHOR_TESTING=1 RELEASE_TESTING=1
+    - jdk: "oraclejdk8"
+      env: COVERAGE=1
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
   - source ~/travis-perl-helpers/init
