--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
       env: AUTHOR_TESTING=1 RELEASE_TESTING=1
     - jdk: "oraclejdk8"
       env: COVERAGE=1
+    - jdk: "oraclejdk9"
+      env: PERL_INLINE_JAVA_JNI=1
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
   - source ~/travis-perl-helpers/init
