--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,27 @@
-language: java
+language: generic
 sudo: false
-jdk:
-  - oraclejdk8
-  - oraclejdk9
-  - openjdk7
 matrix:
   include:
-    - jdk: "oraclejdk8"
-      env: AUTHOR_TESTING=1 RELEASE_TESTING=1
-    - jdk: "oraclejdk8"
+    - os: linux
+      language: java
+      jdk: openjdk7
+    - os: linux
+      language: java
+      jdk: oraclejdk8
+    - os: linux
+      language: java
+      jdk: oraclejdk9
+    - os: linux
+      language: java
+      jdk: oraclejdk8
       env: COVERAGE=1
-    - jdk: "oraclejdk9"
+    - os: linux
+      language: java
+      jdk: oraclejdk8
+      env: AUTHOR_TESTING=1 RELEASE_TESTING=1
+    - os: linux
+      language: java
+      jdk: oraclejdk9
       env: PERL_INLINE_JAVA_JNI=1
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
