--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: generic
 sudo: false
 matrix:
   include:
+    - os: osx
+      osx_image: xcode9.2
 #    - os: linux
 #      language: java
 #      jdk: openjdk7
